chore(pre-align): align heading structure (65 docs) with ko (#70)
* chore(pre-align): fix heading structure in 186 files

- ko/console/console-01-getting-started.md
- en/console/console-01-getting-started.md
- ja/console/console-01-getting-started.md
- ko/console/console-02-new-server.md
- en/console/console-02-new-server.md
- ja/console/console-02-new-server.md
- ko/console/console-03-autoscale.md
- en/console/console-03-autoscale.md
- ja/console/console-03-autoscale.md
- ko/console/console-04-monitoring.md
- en/console/console-04-monitoring.md
- ja/console/console-04-monitoring.md
- ko/console/console-05-service-channel.md
- en/console/console-05-service-channel.md
- ja/console/console-05-service-channel.md
- ko/console/console-06-state.md
- en/console/console-06-state.md
- ja/console/console-06-state.md
- ko/console/console-07-safe-pause.md
- en/console/console-07-safe-pause.md
- ja/console/console-07-safe-pause.md
- ko/error-codes.md
- en/error-codes.md
- ja/error-codes.md
- ko/hammer/hammer-1-start.md
- en/hammer/hammer-1-start.md
- ja/hammer/hammer-1-start.md
- ko/hammer/hammer-2-functional-test-guide.md
- en/hammer/hammer-2-functional-test-guide.md
- ja/hammer/hammer-2-functional-test-guide.md
- ko/hammer/hammer-3-scenario-test-guide.md
- en/hammer/hammer-3-scenario-test-guide.md
- ja/hammer/hammer-3-scenario-test-guide.md
- ko/overview.md
- en/overview.md
- ja/overview.md
- ko/release-notes/release-notes-console.md
- en/release-notes/release-notes-console.md
- ja/release-notes/release-notes-console.md
- ko/release-notes/release-notes-hammer.md
- en/release-notes/release-notes-hammer.md
- ja/release-notes/release-notes-hammer.md
- ko/release-notes/release-notes-server.md
- en/release-notes/release-notes-server.md
- ja/release-notes/release-notes-server.md
- ko/release-notes/release-notes-typescript.md
- en/release-notes/release-notes-typescript.md
- ja/release-notes/release-notes-typescript.md
- ko/release-notes/release-notes-unity.md
- en/release-notes/relea