@@ -1,6 +1,10 @@
-## Game > GameAnvil > テスト開発ガイド > 始める
+<!-- pre-align:aligned sig=3180aad95516 -->
 
-### 概要
+<a id="game-gameanvil-guide-to-test-development-get-started"></a>
+## Game > GameAnvil > テスト開発ガイド > 始める { #game-gameanvil-guide-to-test-development-get-started }
+
+<a id="overview"></a>
+### 概要 { #overview }
 
 GameHammerは、GameAnvilエンジンを利用したゲームサーバー開発後に使用できる性能及び機能テストツールです。実際のコネクタが提供する全ての機能を同様に使用してテストでき、負荷テストのために多数のGameHammerを同時に実行するなどの使い方が可能です。テスト進行中に進行状況を確認したり、テスト最終結果を集計して確認及び保存したりできます。
 
@@ -13,20 +17,24 @@ GameHammerは、GameAnvilエンジンを利用したゲームサーバー開発�
 
 このガイドではGameHammerの使用方法を詳細な例とともに提供します。サーバーエンジンと同様にIntelliJを基準に説明します。
 
-### サポート環境及びプロトコル
+<a id="supported-environment-and-protocol"></a>
+### サポート環境及びプロトコル { #supported-environment-and-protocol }
 
+<a id="supported-environment-and-protocol-supported-network-protocol"></a>
 #### サポートするネットワークプロトコル
 
 * TCP/IP
 * SSL over TCP/IP
 
+<a id="supported-environment-and-protocol-available-application-protocol-format"></a>
 #### 使用可能なアプリケーションプロトコル形式
 
 * Google Protocol Buffers
 * カスタムバイトストリーム
 * HTTP/HTTPS(特定の用途に限定)
 
-### プロジェクトにGameHammer依存関係を追加
+<a id="add-gamehammer-dependency-to-project"></a>
+### プロジェクトにGameHammer依存関係を追加 { #add-gamehammer-dependency-to-project }
 
 GameHammerはGameAnvilと同様にMavenを通じて配布されます。pom.xmlファイルのdependencies要素に次のように追加すると、GameHammerを使用できます。
 
@@ -41,7 +49,8 @@ GameHammerはGameAnvilと同様にMavenを通じて配布されます。pom.xml�
 <dependencies>
 ```
 
-### MavenでGameHammer jarファイルを生成する
+<a id="create-gamehammer-jar-file-with-maven"></a>
+### MavenでGameHammer jarファイルを生成する { #create-gamehammer-jar-file-with-maven }
 
 GameHammerを利用してテストシナリオを作成した後、GameAnvilコンソールでテストする目的などでjarファイルを生成できます。
 
@@ -65,12 +74,3 @@ Process finished with exit code 0
 
 新しく生成されたtargetディレクトリ内でビルドされたファイルを確認できます。
 
-### 不要なdebugログの削除方法
-
-GameHammerを実行した際、内部ライブラリ関連のDEBUGレベルログが発生する場合があります。動作には異常ありませんが、このようなログを削除したい場合はVMOptionに以下の項目を追加してください。
-
-```
--Dio.netty.tryReflectionSetAccessible=true
---add-opens java.base/java.lang=ALL-UNNAMED
---add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-```
